Fix HTML formatting and ensure proper structure

--- a/contacte.html
+++ b/contacte.html
@@ -39,9 +39,9 @@
         <fieldset>
             <Legend>Vos Activités De Loisir</Legend>
             <label>Quel est votre système d'exploitation préféré ?</label>
-            <input type="radio" class="option" id="Windows" value="Windows"><p class="option">Windows</p>
-            <input type="radio" class="option" id="Mac" value="Mac"><p class="option">Mac</p>
-            <input type="radio" class="option" id="Linux" value="Linux"><p class="option">Linux</p>
+            <input type="radio" name="option" id="Windows" value="Windows"><p class="option">Windows</p>
+            <input type="radio" name="option" id="Mac" value="Mac"><p class="option">Mac</p>
+            <input type="radio" name="option" id="Linux" value="Linux"><p class="option">Linux</p>
             <label for="text" >Description:</label>
             <textarea placeholder="Votre Message" rows="5" id="text" name="text" required></textarea><br>
            <label for="niveau">Votre niveau en informatique :</label>
@@ -56,4 +56,5 @@
         </div>
     </form>
 </body>
+
 </html>
