--- a/contacte.html
+++ b/contacte.html
@@ -14,26 +14,26 @@
         <fieldset>
             <legend>Informations Personnelles</legend>
             <label for="nc">Nom Complet :</label>
-            <input type="text" id="nc" name="nc" placeholder="Votre nom" required>
+            <input type="text" id="nc" name="nc" placeholder="Votre nom" >
             <br>
             <label for="date">Date de naissance:</label>
-            <input type="date" id="date" name="date" placeholder="Votre date de naissance" required>
+            <input type="date" id="date" name="date" placeholder="Votre date de naissance" >
             <br>
             <label for="email">Adresse mail:</label>
-            <input type="email" name="mail" id="email" placeholder="exemple@gmail.com" required>
+            <input type="email" name="mail" id="email" placeholder="exemple@gmail.com" >
             <br>
             <label for="tel">Téléphone :</label>
-            <input type="tel" name="" id="tel" placeholder="exemple:12 345 678" maxlength="8" required>
+            <input type="tel" name="" id="tel" placeholder="exemple:12 345 678" maxlength="8" >
             <br>
             <label for="genre">Genre :</label>
             <input type="radio" name="genre" id="homme">  Homme 
             <input type="radio" name="genre" id="femme">  Femme 
             <br>
             <label for="mdp">Mot de passe :</label>
-            <input type="password" name="" id="mdp" placeholder="ex: azerty1234#" required>
+            <input type="password" name="" id="mdp" placeholder="ex: azerty1234#" >
             <br>
             <label for="cmdp">Confirmer votre mot de passe :</label>
-            <input type="password" name="" id="cmdp" placeholder="ex: azerty1234#" required>
+            <input type="password" name="" id="cmdp" placeholder="ex: azerty1234#" >
             <br>
         </fieldset>
         <fieldset>
@@ -43,11 +43,11 @@
             <input type="radio" name="option" id="Mac" value="Mac"><p class="option">Mac</p>
             <input type="radio" name="option" id="Linux" value="Linux"><p class="option">Linux</p>
             <label for="text" >Description:</label>
-            <textarea placeholder="Votre Message" rows="5" id="text" name="text" required></textarea><br>
+            <textarea placeholder="Votre Message" rows="5" id="text" name="text" ></textarea><br>
            <label for="niveau">Votre niveau en informatique :</label>
             <input type="range" name="" id="niveau" required min="1" max="100" value="50" onclick="changer();"><output id="aff">50</output> %
             <br>
-            <input type="checkbox" name="" id="checkbox" required>
+            <input type="checkbox" name="" id="checkbox" >
             <p id="p">  J'accepte les conditions d'utilisation</p>
         </fieldset>
         <div id="div_buttons">
@@ -58,3 +58,4 @@
 </body>
 
 </html>
+
