Revise introduction content in accueil.html
Updated the content of the educational site introduction to provide a clearer overview of the importance of operating systems and networks.

--- a/accueil.html
+++ b/accueil.html
@@ -12,9 +12,21 @@
 
 <body>
     <h2 class="titre_principal">Bienvenue sur le site éducatif</h2>
-    <p class="text">Ce site éducatif est destiné aux élèves de la 3ᵉ année informatique. Il a pour objectif de faciliter la compréhension des notions fondamentales <strong>des systèmes d’exploitation</strong> et <strong>des réseaux informatiques</strong>. À travers des explications simples, des exemples illustratifs et des contenus structurés, il aide les élèves à acquérir les bases essentielles nécessaires à leur formation et à développer leurs compétences en informatique.
+    <p class="text">L'informatique moderne repose sur deux piliers fondamentaux : <span>les systèmes d'exploitation </span>et <span>les
+        réseaux informatiques</span>. Sans ces deux éléments, il serait impossible de faire fonctionner un ordinateur, un
+        smartphone ou même un serveur Internet. Ce site a pour objectif de fournir une base solide et progressive pour
+        comprendre ces deux domaines essentiels.
+
+        Les systèmes d'exploitation assurent la communication entre le matériel et les logiciels, tandis que les réseaux
+        permettent aux machines de communiquer entre elles à l'échelle locale ou mondiale. Ensemble, ils constituent
+        l'infrastructure invisible de l'Internet, des entreprises et des systèmes critiques.
+
+        Ce cours est destiné principalement aux étudiants en informatique, aux élèves des filières techniques et à toute
+        personne souhaitant acquérir une culture numérique solide et durable.
+        
     </p>
-    
+
 </body>
+
 
 </html>
