Add theme toggle button in footer
Added a button to toggle between dark and light mode in the footer.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Systèmes d’Exploitation et Réseaux</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link rel="shortcut icon" href="logo.avif" type="image/svg+xml">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
@@ -58,7 +59,9 @@
     <footer>
         <p>© 2025 – Site éducatif 3ème info lycée Touza</p>
         <p id="p_footer">Rayen Gharsallah</p>
+        <input type="button" id="btn-theme" value="Mode : sombre 🌗 Clair" onclick="changerTheme()">
     </footer>
 </body>
+
 
 </html>
