Add theme toggle button and script reference
Added a button to toggle light and dark mode and included a script reference.

--- a/accueil.html
+++ b/accueil.html
@@ -12,6 +12,7 @@
 
 <body>
     <h2 class="titre_principal">Bienvenue sur le site éducatif</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <p class="text">L'informatique moderne repose sur deux piliers fondamentaux : <span>les systèmes d'exploitation </span>et <span>les
         réseaux informatiques</span>. Sans ces deux éléments, il serait impossible de faire fonctionner un ordinateur, un
         smartphone ou même un serveur Internet. Ce site a pour objectif de fournir une base solide et progressive pour
@@ -25,8 +26,7 @@
         personne souhaitant acquérir une culture numérique solide et durable.
         
     </p>
-
+    <script src='main.js'></script>
 </body>
-
 
 </html>
