Add theme toggle button to configuration page

--- a/configuration-ip.html
+++ b/configuration-ip.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <h2 class="titre_principal">Configuration De Réseaux</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <p class="text">La configuration d’un réseau informatique consiste à mettre en place l’ensemble des paramètres et des équipements nécessaires pour permettre à des ordinateurs et des périphériques de communiquer entre eux et d’accéder aux ressources partagées ou à Internet. Elle nécessite du matériel comme les ordinateurs, les cartes réseau, les câbles Ethernet, les switchs, les routeurs ou le Wi-Fi, ainsi que des paramètres logiciels définis par le système d’exploitation. Chaque machine doit posséder une adresse IP unique, un masque de sous-réseau, une passerelle et un serveur DNS afin d’assurer une communication correcte. La configuration peut être automatique grâce au protocole DHCP, qui attribue les paramètres sans intervention de l’utilisateur, ou manuelle (statique) lorsque les informations sont saisies à la main, notamment pour les serveurs. Après la configuration, il est important de tester le réseau à l’aide de commandes comme ping pour vérifier la connectivité. Enfin, la sécurité doit toujours être prise en compte en utilisant des mots de passe forts, un pare-feu, un antivirus et en sécurisant le réseau Wi-Fi afin de protéger les données et les utilisateurs.</p>
     <figure class="box">
         <img src="ph2.jpg" alt="Photo d'esxplicatiion">
         <figcaption><cite>Illustration de la configuration d’un réseau avec adressage IP et équipements réseau</cite></figcaption>
     </figure>
+    <script src="main.js"></script>
 </body>
 </html>
