--- a/contacte.html
+++ b/contacte.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1 id="contact">Contactez-nous</h1>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <form onsubmit="return envoyer();" action="Test.php">
         <fieldset>
             <legend>Informations Personnelles</legend>
@@ -55,5 +56,6 @@
             <input type="reset" value="Annuler">
         </div>
     </form>
+    <script src="main.js"></script>
 </body>
 </html>
