Add theme switch button and script reference
Added a button for theme switching and included a script reference.

--- a/definitions.html
+++ b/definitions.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <h2 class="titre_principal">Définition d’un réseau</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <p class="text">Un réseau informatique est un ensemble d’ordinateurs et de périphériques interconnectés afin d’échanger des informations et partager des ressources. <strong> Exemples :</strong> <span> Partage d’imprimante dans une école, Connexion Internet à la maison et Réseau d’une entreprise.</span>
 </p>
 <div class="video-container"><iframe src="https://www.youtube.com/embed/3QhU9jd03a0?si=9JgCqyjNpU8r88M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+<script src="main.js"></script>
 </body>
 </html>
