Add theme toggle button and script reference
Added a button to toggle light/dark mode and included a script reference.

--- a/Fonction.html
+++ b/Fonction.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h2 class="titre_principal">Fonctions du Système d’Exploitation</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <table>
         <thead>
             <tr>
@@ -38,5 +39,6 @@
     <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9fJURJCF_RQ?si=FmlPf82YK3xXqO2n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
