Fix footer year and theme button text
Updated footer year and button text for theme switch.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel="shortcut icon" href="logo.avif" type="image/svg+xml">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 
 <body>
@@ -21,7 +20,7 @@
     <nav>
         <ul>
             <li>
-                <audio  controls autoplay loop >
+                <audio controls autoplay loop >
                     <source src="music.mp4" type="audio/mpeg">
                 </audio>
             </li>
@@ -48,7 +47,7 @@
             <li><a href="configuration-ip.html" target="F">Configuration Réseau</a></li>
             <li><a href="securite-reseau.html" target="F">Sécurité Réseau</a></li>
         </ul>
-        <h3>Partie 3 : Contactez l'administrateur</h3>
+        <h3>Contactez l'administrateur</h3>
         <ul>
             <li><a href="contacte.html" target="F">Contactez-nous</a></li>
         </ul>
@@ -57,11 +56,11 @@
         <iframe name="F" src="accueil.html"></iframe>
     </main>
     <footer>
-        <p>© 2025 – Site éducatif 3ème info lycée Touza</p>
+        <p>© 2026 – Site éducatif 3ème info lycée Touza</p>
         <p id="p_footer">Rayen Gharsallah</p>
-        <input type="button" id="btn-theme" value="Mode : sombre 🌗 Clair" onclick="changerTheme()">
+        <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     </footer>
+    <script src='main.js'></script>
 </body>
-
 
 </html>
