--- a/intro2.html
+++ b/intro2.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <h2 class="titre_principal">Introduction aux Réseaux</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <p class="text">Les réseaux informatiques jouent un rôle essentiel dans notre vie quotidienne. Ils permettent la communication entre les ordinateurs et le partage des ressources telles que les fichiers, les imprimantes et l’accès à Internet. Grâce aux réseaux, les utilisateurs peuvent échanger des informations rapidement, collaborer à distance et accéder à des services en ligne comme le courrier électronique, les réseaux sociaux et les plateformes éducatives. Ainsi, les réseaux facilitent la vie personnelle, scolaire et professionnelle.</p>
     <figure class="box">
         <img src="ph4.png" alt="Photo d'esxplicatiion">
         <figcaption><cite>Exemple de réseau informatique reliant plusieurs ordinateurs et périphériques.</cite></figcaption>
     </figure>
+    <script src="main.js"></script>
 </body>
 </html>
