Add theme toggle button and script reference
Added a button to toggle light/dark mode and included a script reference.

--- a/Protocoles réseau.html
+++ b/Protocoles réseau.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h2 class="titre_principal">Protocoles réseau</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <details>
         <summary>1. TCP/IP</summary>
         <p class="summary">
@@ -30,5 +31,6 @@
         Utilise le chiffrement (SSL/TLS)</p>
     </details>
     <div class="video-container"><iframe src="https://www.youtube.com/embed/1zVZ9cWFnCc?si=DHsyUaPveh7Ez1h4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+    <script src="main.js"></script>
 </body>
 </html>
