Enhance Sécurisation.html with theme toggle and content
Added a button for theme switching and enhanced the content on system security.

--- a/Sécurisation .html
+++ b/Sécurisation .html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h2 class="titre_principal">Sécurisation d'un Système d'Exploitation</h2>
-    <p class="text">La sécurisation est essentielle pour protéger les données et la vie privée d'utilisateur.</p>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
+    <p class="text">La sécurisation des systèmes informatiques constitue un impératif fondamental, bien au-delà d’une simple bonne pratique. Elle vise à protéger l'intégrité, la confidentialité et la disponibilité des données contre un paysage de cybermenaces en constante évolution (cyberattaques, fuites, ransomwares). Cette protection est cruciale pour garantir non seulement la vie privée des utilisateurs, menacée par la collecte et l'exploitation non consentie de leurs informations personnelles, mais aussi la sauvegarde de données sensibles (financières, médicales, professionnelles). Elle repose sur une approche multiniveau, combinant des solutions techniques (pare-feu, chiffrement, authentification forte), des mesures organisationnelles (politiques de sécurité, formations) et le respect de cadres réglementaires stricts comme le RGPD. En définitive, une sécurité robuste est le pilier de la confiance numérique et une condition sine qua non pour la pérennité des organisations et la protection des individus dans l'espace digital.</p>
     <details>
         <summary>1. Les Outils</summary>
         <p class="summary"><strong>Antivirus et pare-feu :</strong> L'antivirus <span>protège</span> contre les virus et logiciels malveillants et le Pare-feu <span>bloque </span>les connexions non autorisées.</p>
@@ -18,6 +19,6 @@
         <summary>2. Bonnes pratiques</summary>
         <p class="summary">Adopter des mots de passe sécurisés, éviter d’ouvrir des pièces jointes inconnues et réaliser des sauvegardes régulières sont des pratiques très importantes. Il est également essentiel d’installer rapidement les mises à jour de sécurité proposées par l’éditeur du système d’exploitation.</p>
     </details>
-
+    <script src="main.js"></script>
 </body>
 </html>
