--- a/securite-reseau.html
+++ b/securite-reseau.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <h2 class="titre_principal">Sécurité Réseau</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <p class="text">La sécurité réseau désigne l’ensemble des méthodes et des outils utilisés pour protéger un réseau informatique, les ordinateurs et les données échangées contre les accès non autorisés, les attaques et les virus. Elle vise à garantir la confidentialité, l’intégrité et la disponibilité des informations. Pour assurer une bonne sécurité réseau, il est essentiel d’utiliser des mots de passe forts, d’installer et de mettre à jour régulièrement un antivirus, d’activer le pare-feu (firewall), et de maintenir le système d’exploitation à jour. La sécurisation du réseau Wi-Fi à l’aide de protocoles comme WPA2 ou WPA3 est également indispensable pour empêcher les intrusions. En outre, il faut éviter d’ouvrir des fichiers ou des liens suspects et limiter les droits d’accès aux ressources partagées. Une bonne sécurité réseau permet ainsi de protéger les données personnelles, d’assurer le bon fonctionnement du réseau et de prévenir les pertes d’informations.</p>
     <figure class="box">
         <img src="ph3.jpg" alt="Configuration & Protection. 🛠️🔒">
         <figcaption><cite>Configuration & Protection. 🛠️🔒</cite></figcaption>
     </figure>
+    <script src="main.js"></script>
 </body>
 </html>
