Add theme toggle button and script reference
Added a button to toggle light/dark mode and included a script reference.

--- a/Types de réseaux.html
+++ b/Types de réseaux.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h2 class="titre_principal">Types de réseaux</h2>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
     <table>
         <thead>
             <tr>
@@ -39,5 +40,6 @@
         <img src="ph1.png" alt="Photo d'esxplicatiion">
         <figcaption><cite>Connectivité & Paramétrage. ⚙️🌐</cite></figcaption>
     </figure>
+    <script src="main.js"></script>
 </body>
 </html>
