Enhance HTML with theme toggle and content update
Added a button to toggle light/dark mode and expanded the content on operating systems.

--- a/Types de systèmes.html
+++ b/Types de systèmes.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h2 class="titre_principal">Types de systèmes</h2>
-    <p class="text">Il existe plusieurs types de systèmes d’exploitation, chacun étant utilisé selon le type d’appareil et les besoins.</p>
+    <input type="button" id="btn-theme" value="Mode : Clair 🌗 sombre" onclick="changerTheme()">
+    <p class="text">Les systèmes d’exploitation se déclinent en une variété de catégories, chacune conçue pour un environnement informatique spécifique et adaptée à des besoins distincts. On distingue principalement les systèmes pour ordinateurs personnels (comme Windows, macOS ou les distributions Linux), optimisés pour une interaction utilisateur riche et la polyvalence des tâches ; les systèmes mobiles (iOS, Android), axés sur l'interface tactile, l'autonomie et les applications nomades ; les systèmes serveurs (Windows Server, Linux Server), bâtis pour la stabilité, la sécurité et la gestion de ressources partagées ; et enfin les systèmes embarqués ou temps réel, dédiés au contrôle de machines industrielles, d'appareils électroniques ou de l'Internet des Objets (IoT). Le choix d'un système d'exploitation dépend donc à la fois du type d'appareil (hardware), des applications requises, des impératifs de sécurité et de performance, ainsi que de l'écosystème logiciel associé. Cette spécialisation croissante reflète l'évolution des usages numériques et la complexité des dispositifs informatiques modernes.</p>
     <details>
         <summary>1. Systèmes d’exploitation pour ordinateurs</summary>
         <p class="summary">Ils sont utilisés sur les ordinateurs de bureau et les ordinateurs portables. <strong> Exemples : </strong><span>Windows, Linux, macOS</span>.</p>
@@ -30,5 +31,6 @@
         <summary>5. Systèmes d’exploitation temps réel</summary>
         <p class="summary">Ils sont utilisés dans des systèmes qui doivent réagir très rapidement. <strong>Exemples : </strong> <span>systèmes de contrôle industriel, robots, équipements médicaux. </span></p>
     </details>
+    <script src="main.js"></script>
 </body>
 </html>
