Disable search input and button in index.html
Updated search input and button to be disabled.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </audio>
             </li>
         </ul>
-        <input type="search" id="search-input" placeholder="Erreur de recherche :(" readonly>
-        <button type="submit">OK</button>
+        <input type="search" id="search-input" placeholder="Erreur de recherche :(" disabled>
+        <button type="submit" disabled>OK</button>
         <h3>Menu</h3>
         <ul>
             <li><a href="accueil.html" target="F">Accueil</a></li>
